--- a/workflow/pom.xml
+++ b/workflow/pom.xml
@@ -9,11 +9,21 @@
   
   <dependencies>
        <dependency>
+			<groupId>org.fkjava.common</groupId>
+			<artifactId>data</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-spring</artifactId>
 			<version>5.22.0</version>
 		</dependency>
 	
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
